Update licence generator to run under Java11.